...
        didSet {
            contentView.isHidden = true
        }
    }
    
    @IBOutlet private weak var feedItemBookmarkButton: UIButton!
    @IBOutlet private weak var shareBarButtonItem: UIBarButtonItem!
    
    @IBOutlet private weak var feedItemImageView: VImageView!
    @IBOutlet private weak var feedItemPlayerButton: UIButton!
    
    @IBOutlet private weak var feedItemDateLabel: UILabel!
    
...
    }
    
    //Tests
    private func setupAccessibility() {
        shareBarButtonItem.accessibilityIdentifier = "shareBarButtonItem"
        feedItemUrlButton.accessibilityIdentifier = "feedUrlButton"
        feedItemPlayerButton.accessibilityIdentifier = "feedDetailPlayerButton"
    }
    
}


// MARK: - UICollectionViewDelegate
...
