...
    }
    
    //Tests
    private func setupAccessibility() {
        footerActivity.accessibilityIdentifier = "loadingView"
        footerLabel.accessibilityIdentifier = "footerLabel"
        tableView.accessibilityIdentifier = "feedTableView"
    }

}

// MARK: - UITableViewDelegate

...
